--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # 镜像仓库（国内无法正常访问 Docker Hub 镜像仓库，通过 Github Action 将 Docker Hub 上的镜像推送到 Github 镜像仓库）
-# MIRROR_REGISTRY_REPO=ghcr.io/droplet-js/
+# MIRROR_REGISTRY_REPO=ghcr.io/hub-mirror/
 
 # Time Zone
 TIME_ZONE=Asia/Shanghai
