--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
+# docker-compose --env-file .env.docker up -d
+
 # 服务
 services:
 
-  # docker-compose --env-file .env.docker up -d official-website-dev
   official-website-dev:
     container_name: official-website-dev
     image: ${MIRROR_REGISTRY_REPO}nginx:1.23.3-alpine
@@ -16,7 +17,6 @@ services:
     environment:
       - TZ=${TIME_ZONE:-Asia/Shanghai}
 
-  # docker-compose --env-file .env.docker up -d official-website-ssg
   official-website-ssg:
     container_name: official-website-ssg
     image: ${MIRROR_REGISTRY_REPO}nginx:1.23.3-alpine
