--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
   #     - host.docker.internal:host-gateway
   #   volumes:
   #     - ./dist:/usr/share/nginx/html
+  #     - ./nginx.conf:/etc/nginx/conf.d/default.conf
   #   environment:
   #     - TZ=${TIME_ZONE:-Asia/Shanghai}
 
@@ -28,5 +29,6 @@ services:
       - host.docker.internal:host-gateway
     volumes:
       - ./.output/public:/usr/share/nginx/html
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     environment:
       - TZ=${TIME_ZONE:-Asia/Shanghai}
