--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
-    "typescript": "^5.5.2",
-    "vue-tsc": "^2.0.22"
+    "typescript": "5.4.4",
+    "vue-tsc": "^1.8.27"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
