--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
+    "format": "prettier --write \"./**/*.ts\"",
+    "license-checker": "license-checker --excludePrivatePackages --production --onlyAllow=\"ISC;BSD-3-Clause;BSD-2-Clause;MIT;Apache-2.0;0BSD;Python-2.0\"",
     "typecheck": "nuxt typecheck"
   },
   "dependencies": {
@@ -34,6 +36,8 @@
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "license-checker": "^25.0.1",
+    "prettier": "^3.3.2",
     "typescript": "5.4.4",
     "vue-tsc": "^1.8.27"
   },
