--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
+    "prelint": "nuxt prepare",
     "lint": "eslint \"{app,modules,server}/**/*.{vue,ts}\"",
+    "prelint-fix": "nuxt prepare",
     "lint-fix": "eslint \"{app,modules,server}/**/*.{vue,ts}\" --fix",
     "typecheck": "nuxt typecheck",
     "format": "prettier --write \"{app,modules,server}/**/*.{ts,vue}\"",
