--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,19 @@
 server {
     listen 80;
+    listen  [::]:80;
 
     root /usr/share/nginx/html;
 
-    error_page 404  /404.html;
-
     location / {
+        # try_files $uri $uri/ $uri/index.html =404;
         try_files $uri $uri/ =404;
     }
+
+    error_page  404              /404.html;
+
+    # redirect server error pages to the static page /50x.html
+    # error_page   500 502 503 504  /50x.html;
+    # location = /50x.html {
+    #     root   html;
+    # }
 }
