--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "license-checker": "^25.0.1",
     "prettier": "^3.3.2",
     "typescript": "5.4.4",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^1.8.27",
+    "zod": "^3.23.8"
   },
   "engines": {
     "node": ">=18.0.0"
