--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ services:
 
   pocketbase:
     container_name: pocketbase
-    image: pocketbase:0.22.14
-    build:
-      context: ./.docker/pocketbase/
-      args:
-        - PB_VERSION:0.22.14
+    image: ${MIRROR_REGISTRY_REPO}pocketbase:v0.22.14
+    # build:
+    #   context: ./.docker/pocketbase/
+    #   args:
+    #     - PB_VERSION:0.22.14
     restart: on-failure
     hostname: pocketbase
     ports:
