--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,34 +3,34 @@
 # 服务
 services:
 
-  pocketbase:
-    container_name: pocketbase
-    image: ${MIRROR_REGISTRY_REPO}pocketbase:v0.22.14
-    # build:
-    #   context: ./.docker/pocketbase/
-    #   args:
-    #     - PB_VERSION:0.22.14
-    restart: on-failure
-    hostname: pocketbase
-    ports:
-      - 8090:8090
-    volumes:
-      - ./pb/pb_data:/pb/pb_data
-
-  # official-website-dev:
-  #   container_name: official-website-dev
-  #   image: ${MIRROR_REGISTRY_REPO}nginx:1.23.3-alpine
+  # pocketbase:
+  #   container_name: pocketbase
+  #   image: ${MIRROR_REGISTRY_REPO}pocketbase:v0.22.14
+  #   # build:
+  #   #   context: ./.docker/pocketbase/
+  #   #   args:
+  #   #     - PB_VERSION:0.22.14
   #   restart: on-failure
-  #   hostname: official-website-dev
+  #   hostname: pocketbase
   #   ports:
-  #     - 8080:80
-  #   extra_hosts:
-  #     - host.docker.internal:host-gateway
+  #     - 8090:8090
   #   volumes:
-  #     - ./dist:/usr/share/nginx/html
-  #     - ./nginx.conf:/etc/nginx/conf.d/default.conf
-  #   environment:
-  #     - TZ=${TIME_ZONE:-Asia/Shanghai}
+  #     - ./pb/pb_data:/pb/pb_data
+
+  official-website-dev:
+    container_name: official-website-dev
+    image: ${MIRROR_REGISTRY_REPO}nginx:1.23.3-alpine
+    restart: on-failure
+    hostname: official-website-dev
+    ports:
+      - 8080:80
+    extra_hosts:
+      - host.docker.internal:host-gateway
+    volumes:
+      - ./dist:/usr/share/nginx/html
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    environment:
+      - TZ=${TIME_ZONE:-Asia/Shanghai}
 
   # official-website-ssg:
   #   container_name: official-website-ssg
