--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
   #   #   context: ./.docker/pocketbase/
   #   #   args:
   #   #     - PB_VERSION:0.22.14
+  #   #     - PB_ARCH:amd64
   #   restart: on-failure
   #   hostname: pocketbase
   #   ports:
