--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ on:
       - 'README.md'
   workflow_dispatch:
   # schedule:
-  #   - cron: '0 0 * * *' # 每周日
+  #   - cron: '0 0 * * *'
 
 permissions:
   contents: read
