--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,11 +18,11 @@ services:
   #   volumes:
   #     - ./pb/pb_data:/pb/pb_data
 
-  official-website-dev:
-    container_name: official-website-dev
+  official-website:
+    container_name: official-website
     image: ${MIRROR_REGISTRY_REPO}nginx:1.23.3-alpine
     restart: on-failure
-    hostname: official-website-dev
+    hostname: official-website
     ports:
       - 8080:80
     extra_hosts:
@@ -32,18 +32,3 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     environment:
       - TZ=${TIME_ZONE:-Asia/Shanghai}
-
-  # official-website-ssg:
-  #   container_name: official-website-ssg
-  #   image: ${MIRROR_REGISTRY_REPO}nginx:1.23.3-alpine
-  #   restart: on-failure
-  #   hostname: official-website-ssg
-  #   ports:
-  #     - 8080:80
-  #   extra_hosts:
-  #     - host.docker.internal:host-gateway
-  #   volumes:
-  #     - ./.output/public:/usr/share/nginx/html
-  #     - ./nginx.conf:/etc/nginx/conf.d/default.conf
-  #   environment:
-  #     - TZ=${TIME_ZONE:-Asia/Shanghai}
