--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "prelint": "nuxt prepare",
-    "lint": "eslint \"{app,modules,server}/**/*.{vue,ts}\"",
+    "lint": "eslint \"{app,layers,modules,server}/**/*.{vue,ts}\"",
     "typecheck": "nuxt typecheck",
-    "format": "prettier --write \"{app,modules,server}/**/*.{ts,vue}\"",
+    "format": "prettier --write \"{app,layers,modules,server}/**/*.{ts,vue}\"",
     "license-checker": "license-checker --excludePrivatePackages --production --onlyAllow=\"ISC;BSD-3-Clause;BSD-2-Clause;MIT;Apache-2.0;0BSD;Python-2.0\""
   },
   "dependencies": {
