--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
   },
   "dependencies": {
     "@nuxt/image": "^1.7.0",
-    "@nuxtjs/robots": "^3.0.0",
+    "@nuxtjs/sitemap": "^5.3.2",
     "nuxt": "^3.12.2",
+    "nuxt-simple-robots": "^4.0.0-rc.19",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
